# semver2

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: lib.rs  util.rs  version.rs
